# postfixCalculator

./: .gitignore  CMakeLists.txt  README.md  compile.sh
include/: postfixCalculator.hpp  stack.hpp
postfixCalculatorApp/: CMakeLists.txt
postfixCalculatorApp/include/: postfixCalculator.hpp
postfixCalculatorApp/src/: main.cpp  postfixCalculator.cpp
src/: main.cpp  postfixCalculator.cpp  stack.cpp
stackLib/: CMakeLists.txt
stackLib/include/: stack.hpp
stackLib/src/: stack.cpp
stackLibTests/: CMakeLists.txt
stackLibTests/include/: testUtils.hpp
stackLibTests/src/: main.cpp  testUtils.cpp  tests.cpp
